test/positive/feature_omittedvoidreturn.java

public class feature_omittedvoidreturn {
  public feature_omittedvoidreturn() {}
  public void m() {
    /* return; */
  }
}

