test/negative/ClassInheritIdenticalSignatures/C.java
package C;
public class C {
    public C() {}
    public void x() { return; }
}
